--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/fortify": "^1.27",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.8",
         "spatie/laravel-permission": "^6.21",
         "yajra/laravel-datatables": "10.0",
